--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-Django
-requests
 argon2-cffi==20.1.0
 asgiref==3.4.1
 async-generator==1.10
@@ -42,6 +40,7 @@ pandocfilters==1.4.3
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.3.1
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
 ptyprocess==0.7.0
