--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ debugpy==1.3.0
 decorator==5.0.9
 defusedxml==0.7.1
 Django==3.2.5
+django-crispy-forms==1.12.0
 entrypoints==0.3
 idna==2.10
 ipykernel==6.0.1
